fix gradle x2